--- a/artemis/values.yaml
+++ b/artemis/values.yaml
@@ -29,7 +29,12 @@ artemis:
 
   podAnnotations: {}
 
-  podSecurityContext: {}
+  podSecurityContext: 
+    allowPrivilegeEscalation: false
+    capabilities: {}
+    privileged: false
+    readOnlyRootFilesystem: false
+    runAsNonRoot: false
     # fsGroup: 2000
 
   securityContext: {}
@@ -42,16 +47,16 @@ artemis:
 
   service:
     type: ClusterIP
-    port: 80
+    port: 8080
 
   ingress:
-    enabled: false
+    enabled: true
     className: ""
     annotations: {}
       # kubernetes.io/ingress.class: nginx
       # kubernetes.io/tls-acme: "true"
     hosts:
-      - host: chart-example.local
+      - host: example.com 
         paths:
           - path: /
             pathType: ImplementationSpecific
@@ -84,3 +89,22 @@ artemis:
   tolerations: []
 
   affinity: {}
+
+
+gateway: 
+
+  replicaCount: 1
+
+  image: 
+    repository: "ghcr.io/ls1intum/"
+    name: "artemis-registry"
+    pullPolicy: Always
+
+  podAnnotations: {}
+
+  podSecurityContext: 
+    allowPrivilegeEscalation: false
+    capabilities: {}
+    privileged: false
+    readOnlyRootFilesystem: false
+    runAsNonRoot: false
