--- a/artemis/templates/secrets/artemis-secrets.yml
+++ b/artemis/templates/secrets/artemis-secrets.yml
@@ -10,8 +10,8 @@ data:
   artemis.lti.oauth-key: ""
   artemis.lti.oauth-secret: ""
   artemis.user-management.external.password: ""
-  artemis.user-management.internal-admin.username: "YWRtaW4=" # base64 encoded "admin"
-  artemis.user-management.internal-admin.password: "YXJ0ZW1pc19hZG1pbg==" # base64 encoded "artemis_admin"
+  artemis.user-management.internal-admin.username: {{ required "Interal admin username is required!" .Values.application.userManagement.internalAdmin.username }}
+  artemis.user-management.internal-admin.password: {{ required "Interal admin password is required!" .Values.application.userManagement.internalAdmin.password }}
   artemis.user-management.ldap.password: ""
   artemis.version-control.password: ""
   artemis.version-control.token: ""
