Add configuration for jira

--- a/artemis/templates/deployments/artemis-deployment.yaml
+++ b/artemis/templates/deployments/artemis-deployment.yaml
@@ -34,11 +34,15 @@ spec:
 
           envFrom:
             - configMapRef:
+                name: artemis-usermanagement-configmap
+            - configMapRef:
                 name: artemis-app
                 optional: false
             - configMapRef:
                 name: application-config
                 optional: false
+            - secretRef:
+                name: artemis-usermanagement-secrets
             - secretRef:
                 name: artemis-secrets
           ports:
