--- a/artemis/templates/deployments/artemis-deployment.yaml
+++ b/artemis/templates/deployments/artemis-deployment.yaml
@@ -36,6 +36,8 @@ spec:
             - configMapRef:
                 name: artemis-usermanagement-configmap
             - configMapRef:
+                name: artemis-vcs-configmap
+            - configMapRef:
                 name: artemis-app
                 optional: false
             - configMapRef:
@@ -43,6 +45,8 @@ spec:
                 optional: false
             - secretRef:
                 name: artemis-usermanagement-secrets
+            - secretRef:
+                name: artemis-vcs-secrets
             - secretRef:
                 name: artemis-secrets
           ports:
