Fix registry password config

--- a/artemis/templates/secrets/jhipster-registry-secrets.yml
+++ b/artemis/templates/secrets/jhipster-registry-secrets.yml
@@ -4,5 +4,5 @@ metadata:
   name: jhipster-registry-secrets
 type: Opaque
 data:
-  jhipster.registry.password: {{ required "Registry  password is required" .Values.application.registry.password | b64enc | quote }}
-  spring.security.user.password: {{ required "Registry  password is required" .Values.application.registry.password | b64enc | quote }}
+  SPRING_SECURITY_USER_PASSWORD: {{ required "Registry  password is required" .Values.application.registry.password | b64enc | quote }}
+  JHIPSTER_REGISTRY_PASSWORD: {{ required "Registry  password is required" .Values.application.registry.password | b64enc | quote }}
