--- a/artemis/templates/secrets/artemis-secrets.yml
+++ b/artemis/templates/secrets/artemis-secrets.yml
@@ -8,3 +8,5 @@ data:
   artemis.athene.base64-secret: ""
   artemis.lti.oauth-key: ""
   artemis.lti.oauth-secret: ""
+  jhipster.registry.password: {{ required "Registry  password is required" .Values.application.registry.password | b64enc | quote }}
+  spring.security.user.password: {{ required "Registry  password is required" .Values.application.registry.password | b64enc | quote }}
