--- a/artemis/templates/configmaps/artemis-configmap.yml
+++ b/artemis/templates/configmaps/artemis-configmap.yml
@@ -10,6 +10,8 @@ data:
   artemis.repo-clone-path: {{ .Values.artemis.volumes.mountPath }}/repos
   artemis.repo-download-clone-path: {{ .Values.artemis.volumes.mountPath }}/repos-download
   eureka.client.enabled: "true"
+  eureka.instance.instanceId: "${HOSTNAME}"
+  spring.hazelcast.interface: "${HOSTNAME}"
   {{- with (first .Values.artemis.ingress.hosts) }}
   server.url: https://{{ .host }}
   {{- end }}
