Fix artemis PVC accessMode

--- a/artemis/values.yaml
+++ b/artemis/values.yaml
@@ -106,7 +106,7 @@ artemis:
   volumes: 
     name: artemis-pvc
     accessModes: 
-      - ReadWriteOnce
+      - ReadWriteMany
     size: 3Gi 
     storageClassName:
     mountPath: "/artemisdata"
