--- a/artemis/templates/configmaps/artemis-configmap.yml
+++ b/artemis/templates/configmaps/artemis-configmap.yml
@@ -9,6 +9,11 @@ data:
   artemis.submission-export-path: {{ .Values.artemis.volumes.mountPath }}/exports
   artemis.repo-clone-path: {{ .Values.artemis.volumes.mountPath }}/repos
   artemis.repo-download-clone-path: {{ .Values.artemis.volumes.mountPath }}/repos-download
+  eureka.client.enabled: "true"
+  eureka.instance.instanceId: "${HOSTNAME}"
+  spring.hazelcast.interface: "${HOSTNAME}"
+  spring.security.websocket.broker.addresses: "{{ .Values.broker.service.name }}:{{ .Values.broker.service.port }}"
   {{- with (first .Values.artemis.ingress.hosts) }}
-  server.url: http://{{ .host }}
+  server.url: https://{{ .host }}
   {{- end }}
+  EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://admin:${spring.security.user.password}@{{ .Values.registry.service.name }}:{{ .Values.registry.service.port }}/eureka/
