--- a/artemis/templates/secrets/activemq-broker-secrets.yml
+++ b/artemis/templates/secrets/activemq-broker-secrets.yml
@@ -4,3 +4,5 @@ metadata:
   name: activemq-broker-secrets
 type: Opaque
 data:
+  ARTEMIS_USER: {{ required "Broker user is required!" .Values.application.broker.username | b64enc | quote }}
+  ARTEMIS_PASSWORD: {{ required "Broker password is required!" .Values.application.broker.password | b64enc | quote }}
