--- a/artemis/templates/services/activemq-broker-service.yml
+++ b/artemis/templates/services/activemq-broker-service.yml
@@ -1,16 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: activemq-broker
+  name: {{ .Values.broker.service.name }}
 spec:
+  selector:
+    app: activemq-broker
   ports:
     - name: stomp
       port: {{ .Values.broker.service.port }}
       protocol: TCP
       targetPort: activemq-stomp
-        #    - name: 8161tcp
-        #      port: 8161
-        #      protocol: TCP
-        #      targetPort: 8161
-  selector:
-    app: activemq-broker
