--- a/artemis/templates/configmaps/artemis-configmap.yml
+++ b/artemis/templates/configmaps/artemis-configmap.yml
@@ -4,7 +4,7 @@ metadata:
   name: artemis-app
 data:
   SPRING_DATASOURCE_URL: jdbc:mysql://artemis-mysql/artemis?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true
-  SPRING_PROFILES_ACTIVE: {{ include "artemis.springprofiles" .}},scheduling
+  SPRING_PROFILES_ACTIVE: {{ include "artemis.springprofiles" .}}
   artemis.file-upload-path: {{ .Values.artemis.volumes.mountPath }}/uploads
   artemis.submission-export-path: {{ .Values.artemis.volumes.mountPath }}/exports
   artemis.repo-clone-path: {{ .Values.artemis.volumes.mountPath }}/repos
