--- a/artemis/values.yaml
+++ b/artemis/values.yaml
@@ -1,12 +1,16 @@
 # Default values for artemis.
 
-# Sepcify the Artemis verion - This value is used as docker image tag, so also "pr-1234" is a valid value here. See https://github.com/ls1intum/Artemis/pkgs/container/artemis/versions
+# Sepcify the Artemis verion 
+# This value is used as docker image tag, so also "pr-1234" is a valid value here. 
+# See https://github.com/ls1intum/Artemis/pkgs/container/artemis/versions
 artemisVersion: "5.5.7"
 
+
+# Application specific configuration 
 application: 
   userManagement: 
 
-    # Initial Artemis admin account
+    # Initial Artemis admin account - Required!
     internalAdmin: 
       username: 
       password:
@@ -27,6 +31,7 @@ application:
 
 
   versioncontrol: 
+
     # Configure version control provider. Valid values are "" and "bitbucket"
     provider: ""
 
@@ -41,10 +46,6 @@ application:
 
       # Artemis user access token in Bitbucket
       token: 
-
-  registry: 
-    jwt: 
-    password: "SuperSecure"
 
   continuousIntegration: 
 
@@ -62,7 +63,7 @@ application:
       notificationToken: 
       applicationLinkName: 
       
-
+  # Configuration of the jHipster Registry
   registry: 
     jwt: 
     password: "SuperSecure"
@@ -73,10 +74,10 @@ application:
     password: "brokerpassword"
 
 
-# Configuration for the artemis application server - This abstraction layer is introduced to support the planned micro-service architecture in the future. 
+# Configuration for the artemis application server pods 
 artemis:
   # Currently we only support 1 replica of artemis. This will change in the future
-  replicaCount: 1
+  replicaCount: 0
 
   image:
     repository: "ghcr.io/ls1intum/"
@@ -108,7 +109,7 @@ artemis:
     tls: []
     #  - secretName: chart-example-tls
     #    hosts:
-    #      - chart-example.local
+    #      - example.com
 
   volumes: 
     name: artemis-pvc
@@ -145,7 +146,6 @@ registry:
     port: 8761
 
 broker: 
-
   image: 
     repository: "ghcr.io/ls1intum/"
     name: "activemq-broker-docker-adoptopenjdk-11"
