--- a/artemis/templates/secrets/artemis-usermanagement-secrets.yml
+++ b/artemis/templates/secrets/artemis-usermanagement-secrets.yml
@@ -8,5 +8,11 @@ data:
   artemis.user-management.external.user: {{ required "Jira username is required" .Values.application.userManagement.jira.username | b64enc | quote }}
   artemis.user-management.external.password: {{ required "Jira password is required" .Values.application.userManagement.jira.password | b64enc | quote }}
   {{- end }}
+  {{- with .Values.application.userManagement.ldap }}
+  {{- if or .url .user_dn .base .password }}
+  artemis.user-management.ldap.user-dn: {{ required "LDAP USER-DN is required" .url | b64enc | quote }}
+  artemis.user-management.ldap.password: {{ required "LDAP PASSWORD is required" .base | b64enc | quote }}
+  {{- end }}
+  {{- end }}
   artemis.user-management.internal-admin.username: {{ required "Interal admin username is required!" .Values.application.userManagement.internalAdmin.username | b64enc | quote}}
   artemis.user-management.internal-admin.password: {{ required "Interal admin password is required!" .Values.application.userManagement.internalAdmin.password | b64enc | quote }}
