added ldap profile and way to disable and enable ldap usage easily

--- a/artemis/templates/secrets/artemis-usermanagement-secrets.yml
+++ b/artemis/templates/secrets/artemis-usermanagement-secrets.yml
@@ -9,7 +9,7 @@ data:
   artemis.user-management.external.password: {{ required "Jira password is required" .Values.application.userManagement.jira.password | b64enc | quote }}
   {{- end }}
   {{- with .Values.application.userManagement.ldap }}
-  {{- if or .url .user_dn .base .password }}
+  {{- if .enabled }}
   artemis.user-management.ldap.user-dn: {{ required "LDAP USER-DN is required" .url | b64enc | quote }}
   artemis.user-management.ldap.password: {{ required "LDAP PASSWORD is required" .base | b64enc | quote }}
   {{- end }}
