--- a/artemis/templates/secrets/artemis-usermanagement-secrets.yml
+++ b/artemis/templates/secrets/artemis-usermanagement-secrets.yml
@@ -10,8 +10,8 @@ data:
   {{- end }}
   {{- with .Values.application.userManagement.ldap }}
   {{- if .enabled }}
-  artemis.user-management.ldap.user-dn: {{ required "LDAP USER-DN is required" .url | b64enc | quote }}
-  artemis.user-management.ldap.password: {{ required "LDAP PASSWORD is required" .base | b64enc | quote }}
+  artemis.user-management.ldap.user-dn: {{ required "LDAP USER-DN is required" .userDn | b64enc | quote }}
+  artemis.user-management.ldap.password: {{ required "LDAP PASSWORD is required" .password | b64enc | quote }}
   {{- end }}
   {{- end }}
   artemis.user-management.internal-admin.username: {{ required "Interal admin username is required!" .Values.application.userManagement.internalAdmin.username | b64enc | quote}}
