--- a/artemis/templates/autoscaler/horizontal-pod-autoscaler.yml
+++ b/artemis/templates/autoscaler/horizontal-pod-autoscaler.yml
@@ -1,4 +1,4 @@
-apiVersion: autoscaling/v1
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ include "artemis.fullname" . }}
@@ -11,4 +11,11 @@ spec:
     name: {{ include "artemis.fullname" . }}
   minReplicas: 1
   maxReplicas: 3
-  targetCPUUtilizationPercentage: 50
+  metrics:
+  - type: Pods
+    pods:
+      metric:
+        name: artemis_instance_websocket_users
+      target:
+        type: AverageValue
+        averageValue: 2
