Add missing config.

--- a/artemis/templates/configmaps/artemis-configmap.yml
+++ b/artemis/templates/configmaps/artemis-configmap.yml
@@ -17,5 +17,7 @@ data:
   server.url: https://{{ .host }}
   {{- end }}
   EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://admin:${spring.security.user.password}@{{ .Values.registry.service.name }}:{{ .Values.registry.service.port }}/eureka/
+  {{- if .Values.artemis.autoscaler.enabled }}
   management.metrics.export.prometheus.enabled: "true"
-  spring.prometheus.monitoringIp: "0.0.0.0/0"
+  spring.prometheus.monitoringIp: {{ .Values.artemis.autoscaler.monitoringIp }}
+  {{- end }}
