--- a/artemis/Chart.yaml
+++ b/artemis/Chart.yaml
@@ -39,6 +39,8 @@ dependencies:
   - name: prometheus-adapter
     repository: https://prometheus-community.github.io/helm-charts
     version: 3.4.1
+    condition: artemis.autoscaler.enabled
   - name: prometheus
     repository: https://prometheus-community.github.io/helm-charts
     version: 15.18.0
+    condition: artemis.autoscaler.enabled
