--- a/artemis/templates/autoscaler/horizontal-pod-autoscaler.yml
+++ b/artemis/templates/autoscaler/horizontal-pod-autoscaler.yml
@@ -1,4 +1,4 @@
-{{- if .Values.artemis.autoscaler.enabled -}}
+{{- if .Values.artemis.autoscaler.enabled }}
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
