--- a/artemis/values.yaml
+++ b/artemis/values.yaml
@@ -93,7 +93,10 @@ artemis:
     name: "artemis"
     pullPolicy: Always
 
-  podAnnotations: {}
+  podAnnotations:
+    prometheus.io/path: /management/prometheus
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "8080"
 
   podSecurityContext: 
     allowPrivilegeEscalation: false
@@ -140,6 +143,8 @@ artemis:
   autoscaler:
     # Wether the autoscaling should be used for the Artemis deployment
     enabled: false
+    # IP address range that should be allowed to query metrics (must include the IP of the deployed prometheus server)
+    monitoringIp: "0.0.0.0/0"
     # Which metrics should be used for the scaling
     metrics:
       # Average number of users that should be targeted - the autoscaler will scale according to this metrics
@@ -183,3 +188,24 @@ broker:
     name: "activemq-broker"
     type: ClusterIP
     port: 61616
+
+
+# Prometheus server & adapter for horizontal autoscaling
+prometheus:
+  alertmanager:
+    enabled: false
+  kubeStateMetrics:
+    enabled: false
+  nodeExporter:
+    enabled: false
+  pushgateway:
+    enabled: false
+  server:
+    global:
+      scrape_interval: "15s"
+
+prometheus-adapter:
+  prometheus:
+      port: 80
+      url: http://{{ tpl (.Release.Name) . }}-prometheus-server.default.svc
+# End Prometheus server & adapter for horizontal autoscaling
