--- a/artemis/templates/secrets/artemis-secrets.yml
+++ b/artemis/templates/secrets/artemis-secrets.yml
@@ -12,3 +12,5 @@ data:
   spring.security.user.password: {{ required "Registry  password is required" .Values.application.registry.password | b64enc | quote }}
   spring.websocket.broker.username: {{ required "Broker user is required!" .Values.application.broker.username | b64enc | quote }}
   spring.websocket.broker.password: {{ required "Broker password is required!" .Values.application.broker.password | b64enc | quote }}
+  spring.artemis.user: {{ required "Broker user is required!" .Values.application.broker.username | b64enc | quote }}
+  spring.artemis.password: {{ required "Broker password is required!" .Values.application.broker.password | b64enc | quote }}
